--- a/code/abstract-visualization/index.html
+++ b/code/abstract-visualization/index.html
@@ -21,5 +21,6 @@
   </head>
   <body>
     <canvas id="canvas" width="400" height="400"></canvas>
+    <script src="./index.js"></script>
   </body>
 </html>
