--- a/tulu/code/abstract-canvas-visualization/index.html
+++ b/tulu/code/abstract-canvas-visualization/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>抽象油画可视化</title>
+    <title>Abstract Canvas Visualization</title>
     <style>
       body {
         background: #000;
