--- a/tulu/code/fire-water/index.html
+++ b/tulu/code/fire-water/index.html
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abstract Canvas Visualization</title>
+    <title>🔥Fire & Water💧</title>
     <style>
+      html,
       body {
-        background: #000;
         overflow: hidden;
+        background: #000;
+        padding: 0px;
+        margin: 0px;
       }
 
-      canvas {
-        display: block;
-        left: 50%;
-        margin: -200px 0 0 -200px;
-        position: absolute;
-        top: 50%;
+      .dg {
+        display: none;
       }
     </style>
   </head>
   <body>
-    <canvas id="canvas" width="400" height="400"></canvas>
+    <canvas id="canvas"></canvas>
+    <script src="./dat.gui.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
