--- a/tulu/code/neon-hexagon-forming-particles/index.html
+++ b/tulu/code/neon-hexagon-forming-particles/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>蜂巢</title>
+    <title>Neon Hexagon-Forming Particles</title>
     <style>
       canvas {
         position: absolute;
