--- a/public/code/Light-pulses/index.html
+++ b/public/code/Light-pulses/index.html
@@ -16,6 +16,8 @@
   <body>
     <canvas id="c"></canvas>
     <script src="./dat.gui.min.js"></script>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
