--- a/public/code/abstract-canvas-visualization/index.html
+++ b/public/code/abstract-canvas-visualization/index.html
@@ -21,6 +21,8 @@
   </head>
   <body>
     <canvas id="canvas" width="400" height="400"></canvas>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
