--- a/public/code/matrix-style-text-rain/index.html
+++ b/public/code/matrix-style-text-rain/index.html
@@ -14,6 +14,8 @@
   <body>
     <canvas id="q"></canvas>
     <script src="./jquery.min.js"></script>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
