--- a/public/code/Interactive-Meteors-fork-from-BrianDGLS/index.html
+++ b/public/code/Interactive-Meteors-fork-from-BrianDGLS/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
