--- a/public/code/circle-shake/index.html
+++ b/public/code/circle-shake/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-<script src="./index.js"></script>
+<script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
