--- a/public/code/fireworks/index.html
+++ b/public/code/fireworks/index.html
@@ -18,6 +18,8 @@
   </head>
   <body>
     <canvas></canvas>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
