--- a/public/code/rain-snow-simulator/index.html
+++ b/public/code/rain-snow-simulator/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <canvas id="canvas" style="position : absolute; top : 0px; left : 0px;"></canvas>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
