--- a/public/code/simplex-vector-flow-field/index.html
+++ b/public/code/simplex-vector-flow-field/index.html
@@ -24,6 +24,8 @@
   <body>
     <canvas></canvas>
     <script src="./simplex-noise.min.js"></script>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
