--- a/tulu/code/chaotic-charges/index.html
+++ b/tulu/code/chaotic-charges/index.html
@@ -19,6 +19,8 @@
   <div id="canvas">
     <canvas></canvas>
   </div>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
