--- a/tulu/code/explosive-attraction/index.html
+++ b/tulu/code/explosive-attraction/index.html
@@ -6,6 +6,8 @@
   <title>Explosive Attraction</title>
 </head>
 <body>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
