--- a/tulu/code/flux/index.html
+++ b/tulu/code/flux/index.html
@@ -39,6 +39,8 @@
   <canvas></canvas>
   <script src="./three.js"></script>
   <script src="./perlin.js"></script>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
