--- a/tulu/code/galactic-orbitals/index.html
+++ b/tulu/code/galactic-orbitals/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
   <canvas id='canv'></canvas>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
