--- a/tulu/code/particle-scramble/index.html
+++ b/tulu/code/particle-scramble/index.html
@@ -12,6 +12,8 @@
     </style>
   </head>
   <body>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
