--- a/tulu/code/particle-surge/index.html
+++ b/tulu/code/particle-surge/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
   <canvas></canvas>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
