--- a/tulu/code/particle-text-animation/index.html
+++ b/tulu/code/particle-text-animation/index.html
@@ -53,6 +53,8 @@
   </head>
   <body>
     <canvas class="canvas"></canvas>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
