--- a/tulu/code/rainbow-firestorm/index.html
+++ b/tulu/code/rainbow-firestorm/index.html
@@ -41,6 +41,8 @@
   </head>
   <body>
     <div class="scene"></div>
+    <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
