--- a/tulu/code/rev/index.html
+++ b/tulu/code/rev/index.html
@@ -25,6 +25,8 @@
   <script src="./three.min.js"></script>
   <script src="./TweenMax.min.js"></script>
   <script src="./underscore-min.js"></script>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
