--- a/tulu/code/waterfall-experiment/index.html
+++ b/tulu/code/waterfall-experiment/index.html
@@ -27,6 +27,8 @@
 </head>
 <body>
   <canvas id="canvas" width="400" height="500"></canvas>
-  <script src="./index.js"></script>
+  <script src="../html2canvas.min.js"></script>
+    <script src="../thumbs.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
