--- a/public/code/Light-pulses/index.html
+++ b/public/code/Light-pulses/index.html
@@ -11,6 +11,10 @@
         left: 0;
         background-color: #222;
       }
+
+      .dg {
+        display: none;
+      }
     </style>
   </head>
   <body>
