--- a/tulu/code/Light-pulses/index.html
+++ b/tulu/code/Light-pulses/index.html
@@ -11,12 +11,16 @@
         left: 0;
         background-color: #222;
       }
+
+      .dg {
+        display: none;
+      }
     </style>
   </head>
   <body>
     <canvas id="c"></canvas>
     <script src="./dat.gui.min.js"></script>
-    <script src="../html2canvas.min.js"></script>
+
     <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
   </body>
