--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover">
     <meta name="keywords" content="神笔,马良,Canvas,设计,Svg,Particles,图形学,Codepen,RunJS,WebGL">
-    <meta name="description" content="图鹿是一个搜罗各路大神作品的社区，给开发和设计提供灵感的创意圣殿。图鹿的案例由Codepen上聚集的图形学大牛卓越的思想碰撞而成，这里，是图形世界的入口。">
+    <meta name="description" content="神笔，搜罗各路图形大神作品，为开发和设计提供灵感。所有案例均为图形学大牛卓越的思想碰撞而成，这里是图形世界的入口。">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>图鹿-神笔马良</title>
+    <title>神笔🔥</title>
   </head>
   <body>
     <noscript>
