添加百度统计

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,15 @@
     <meta name="description" content="神笔，搜罗各路图形大神作品，为开发和设计提供灵感。所有案例均为图形学大牛卓越的思想碰撞而成，这里是图形世界的入口。">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>神笔🔥</title>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?a6401ba72041a4c9a6fcff5caf554896";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
   <body>
     <noscript>
