--- a/code/Free-Radicals/index.html
+++ b/code/Free-Radicals/index.html
@@ -607,5 +607,7 @@
     <div class="particle" id="particle598"></div>
     <div class="particle" id="particle599"></div>
     <div class="particle" id="particle600"></div>
+    
+    <script src="../thumbs.js"></script>
   </body>
 </html>
