--- a/code/Nucleus/index.html
+++ b/code/Nucleus/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nucleus</title>
-  <style>
-    html, body, canvas {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-  </style>
-</head>
-<body>
-  <script src="../thumbs.js"></script>
-  <script src="../three.min.js"></script>
-  <script src="./PbwWKN.js"></script>
-  <script src="./index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nucleus</title>
+    <style>
+      html,
+      body,
+      canvas {
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      .gm-signature-light {
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <script src="../thumbs.js"></script>
+    <script src="../three.min.js"></script>
+    <script src="./PbwWKN.js"></script>
+    <script src="./index.js"></script>
+  </body>
 </html>
