--- a/code/explosive-attraction/index.html
+++ b/code/explosive-attraction/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Explosive Attraction</title>
-</head>
-<body>
-  <script src="../html2canvas.min.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Explosive Attraction</title>
+  </head>
+  <body>
     <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
