--- a/code/waterfall-experiment/index.html
+++ b/code/waterfall-experiment/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Waterfall Experiment</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Waterfall Experiment</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-    body {
-      background: #000;
-    }
+      body {
+        background: #000;
+      }
 
-    #canvas {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      margin: auto;
-      background: #000000;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="canvas" width="400" height="500"></canvas>
-  <script src="../html2canvas.min.js"></script>
+      #canvas {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        margin: auto;
+        background: #000000;
+      }
+    </style>
+  </head>
+  <body>
+    <canvas id="canvas" width="400" height="500"></canvas>
     <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
