--- a/code/chaotic-charges/index.html
+++ b/code/chaotic-charges/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chaotic Charges</title>
-  <style>
-    html, body, div {
-      width : 100%;
-      height : 100%;
-      overflow : hidden;
-      background : black;
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-</head>
-<body>
-  <div id="canvas">
-    <canvas></canvas>
-  </div>
-  <script src="../html2canvas.min.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chaotic Charges</title>
+    <style>
+      html,
+      body,
+      div {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background: black;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="canvas">
+      <canvas></canvas>
+    </div>
     <script src="../thumbs.js"></script>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
