--- a/code/Nucleus/index.html
+++ b/code/Nucleus/index.html
@@ -16,8 +16,9 @@
         top: 0;
         left: 0;
       }
-      .gm-signature-light {
-        display: none;
+      
+      #gm-signature {
+        display: none !important;
       }
     </style>
   </head>
